Adds pushed patterns, js, and css from Pattern-Library

--- a/src/patterns/__environment__/20-atoms/30-search.hbs
+++ b/src/patterns/__environment__/20-atoms/30-search.hbs
@@ -1,5 +1,9 @@
+{{! Generate a unique ID for the search menu if not given. }}
+{{#if (not this.uid)}}{{assign 'uid' (uid 'search--')}}{{/if}}
+
 {{#unless form}}
 <eul-search inline-template
+            :uid="{{JSONstringify this.uid}}"
             :services="{{JSONstringify services}}"
             :param="'{{default param ':query'}}'"
             :defaults="{
@@ -54,12 +58,37 @@
           'is-hover': button.isHover,
           'is-focus': button.isFocus,
         }"
-       :disabled="button.isDisabled">
+       :disabled="button.isDisabled"
+       tabindex="0">
       {{#unless (and layout (eq layout 'contained'))}}
         {{#if button.icon }}{{> tokens-icon id=button.icon classes="-left" }}{{/if}}
         {{button.label}}
       {{/unless}}
     </a>
+
+    {{#if cancelable}}
+    <button class="link search-cancel"
+            @click="reset"
+            @mousedown.native="cancel.isActive = true"
+            @mouseup.native="cancel.isActive = false"
+            @keydown.enter="cancel.isActive = true"
+            @keyup.enter="cancel.isActive = false"
+            @focus.native="cancel.isFocus = true"
+            @blur.native="cancel.isFocus = false"
+            @mouseover.native="cancel.isHover = true"
+            @mouseleave.native="cancel.isHover = false"
+            @keypress.enter="reset"
+            :class="{
+               'is-disabled': cancel.isDisabled,
+               'is-active': cancel.isActive,
+               'is-hover': cancel.isHover,
+               'is-focus': cancel.isFocus,
+             }"
+             :disabled="cancel.isDisabled"
+             tabindex="0">
+      Clear
+    </button>
+    {{/if}}
 
   </div>
 
@@ -71,7 +100,7 @@
   <div class="search -form{{#if (and layout (eq layout 'contained'))}} -contained{{/if}}">
   {{#each services as |service|}}
 
-    <input type="radio" name="{{../id}}" id="{{../id}}-{{id}}" class="search-toggle"{{#if service.default}} checked{{/if}}>
+    <input type="radio" name="{{default ../uid ../id}}" id="{{default ../uid ../id}}-{{id}}" class="search-toggle"{{#if service.default}} checked{{/if}}>
 
     <form action="{{../processor}}"
           method="GET"
@@ -96,6 +125,13 @@
              value="{{#unless (and ../layout (eq ../layout 'contained'))}}{{../button.label}}{{/unless}}"
              class="button search-button{{#if ../button.disabled}} is-disabled{{/if}}{{#if ../button.active}} is-active{{/if}}{{#if ../button.hover}} is-hover{{/if}}{{#if ../button.focus}} is-focus{{/if}}"
              {{#if ../button.disabled}}disabled{{/if}}>
+
+      {{#if cancelable}}
+      <input type="reset"
+             value="Cancel"
+             class="link search-cancel{{#if ../cancel.disabled}} is-disabled{{/if}}{{#if ../cancel.active}} is-active{{/if}}{{#if ../cancel.hover}} is-hover{{/if}}{{#if ../cancel.focus}} is-focus{{/if}}"
+             {{#if ../cancel.disabled}}disabled{{/if}}>
+      {{/if}}
 
     </form>
 
