--- a/src/patterns/__environment__/20-atoms/01-tab.hbs
+++ b/src/patterns/__environment__/20-atoms/01-tab.hbs
@@ -1,25 +1,45 @@
-<eul-tab inline-template :defaults="{
-                            isDisabled: {{default disabled false}},
-                            isActive: {{default active false}},
-                            isHover: {{default hover false}},
-                            isFocus: {{default focus false}}
-                          }">
+{{! Generate a unique ID for the tab if it doesn't already have one. }}
+{{#if (not this.uid)}}{{assign 'uid' (combine 'tab--' (dashcase (lowercase label)))}}{{/if}}
 
-  <button @click="click"
-          @keypress.enter="click"
-          @focus.native="isFocus = true"
-          @blur.native="isFocus = false"
-          @mouseover.native="isHover = true"
-          @mouseleave.native="isHover = false"
-          class="tab"
-          :class="{
-            'is-disabled': isDisabled,
-            'is-active': isActive,
-            'is-hover': isHover,
-            'is-focus': isFocus
-          }"
-          :disabled="isDisabled"class="tab">
-    {{label}}
-  </button>
+{{! Generate a unique group ID if not given. }}
+{{#if (not group)}}{{assign 'group' (combine 'tab--' (uid))}}{{/if}}
 
-</eul-tab>
+{{#unless (eq noscript true)}}
+  <eul-tab inline-template :defaults="{
+                              isDisabled: {{default disabled false}},
+                              isActive: {{default active false}},
+                              isHover: {{default hover false}},
+                              isFocus: {{default focus false}}
+                            }"
+                            :uid="{{JSONstringify this.uid}}"
+                            {{#if menu}}:menu="{{JSONstringify menu}}"{{/if}}
+                            {{#if value}}:value="{{JSONstringify value}}"{{/if}}>
+
+    <button @click="activate"
+            @keypress.enter="click"
+            @focus.native="isFocus = true"
+            @blur.native="isFocus = false"
+            @mouseover.native="isHover = true"
+            @mouseleave.native="isHover = false"
+            class="tab"
+            :class="{
+              'is-disabled': isDisabled,
+              'is-active': isActive,
+              'is-hover': isHover,
+              'is-focus': isFocus
+            }"
+            :disabled="isDisabled"
+            data-uid="{{this.uid}}">
+      {{label}}
+    </button>
+
+  </eul-tab>
+{{/unless}}
+
+{{#unless (eq noscript true)}}<noscript>{{/unless}}
+
+  <input type="radio" class="tab-switch" id="{{this.uid}}" name="{{group}}" value="{{this.uid}}"{{#if active}} checked{{/if}}>
+
+  <label class="tab" for="{{this.uid}}" data-group="{{group}}">{{label}}</label>
+
+{{#unless (eq noscript true)}}</noscript>{{/unless}}
