--- a/src/patterns/__environment__/50-organisms/main.hbs
+++ b/src/patterns/__environment__/50-organisms/main.hbs
@@ -39,68 +39,9 @@
   {{/inArray}}
 
   <main class="section-main-body">
-
     {{#if toc}}
-
-      {{! build an array of heading blocks }}
-      {{> tokens-heading level=2 heading="Table of Contents" toc=false}}
-      {{#each blocks}}
-       {{#if  (eq (dashcase (lowercase type)) 'heading')}}
-       {{storagePush 'headings' this}}
-       {{/if}}
-      {{/each}}
-
-
-      {{assign 'headingBlocks' (storageGet 'headings')}}
-      {{! Open an ordered list }}
-      <ol class="section-main-toc">
-        {{!-- Loop through headings --}}
-        {{#each headingBlocks}}
-          {{! Capture next and prev index values}}
-          {{#if (eq level undefined)}}
-          {{assign 'level' heading-level}}
-          {{/if}}
-          {{#if (eq heading undefined)}}
-          {{assign 'heading' heading-label}}
-          {{/if}}
-          {{assign 'nextIndex' (add @index 1)}}
-          {{assign 'prevIndex' (subtract @index 1)}}
-
-          {{! Capture the data for the next heading }}
-          {{assign 'nextHeading' (itemAt ../headingBlocks nextIndex)}}
-          {{#if (eq nextHeading.level undefined)}}
-          {{assign 'nextHeading.level' nextHeading.heading-level}}
-          {{/if}}
-
-          {{! Write the list item for link to this heading along with it's anchor slug for the href }}
-          <li>
-          <a href="#{{dashcase (lowercase heading)}}">{{heading}}</a>
-
-          {{#if (or (lte nextHeading.level level) (eq nextHeading undefined)) }}
-            {{! If the next heading is higher level or same level as this one, or if it's the last heading, close the li }}
-            </li>
-          {{/if}}
-          {{#if (gt nextHeading.level level)}}
-            {{! If the next heading is lower level than this one, open a new ol }}
-            <ol>
-          {{/if}}
-          {{! Close sublists based on difference of heading levels }}
-          {{#if (or (lt nextHeading.level level) (eq nextHeading undefined) )}}
-            {{#if (or (eq nextHeading.level (subtract level 1)) (and (eq nextHeading undefined) (eq level 3))) }}
-              </ol></li>
-            {{else if (or (eq nextHeading.level (subtract level 2)) (and (eq nextHeading undefined) (eq level 4)))}}
-              </ol></li></ol></li>
-            {{else if (or (eq nextHeading.level (subtract level 3)) (and (eq nextHeading undefined) (eq level 5)))}}
-              </ol></li></ol></li></ol></li>
-            {{else if (or (eq nextHeading.level (subtract level 4)) (and (eq nextHeading undefined) (eq level 6)))}}
-              </ol></li></ol></li></ol></li></ol></li>
-            {{/if}}
-          {{/if}}
-        {{/each}}
-      </ol>
-      {{>atoms-rule}}
+    {{>molecules-table-of-contents}}
     {{/if}}
-    
     {{#block 'section-main-body'}}
     {{>compounds-blocks}}
     {{/block}}
