Updates patterns and assets

--- a/src/engine/__environment__/css/style.css
+++ b/src/engine/__environment__/css/style.css
@@ -6379,6 +6379,8 @@ body {
   }
 }
 .-form-page.section-main .section-main-section,
+.-form-page.section-main .section-main-content,
+.-form-page.section-main .section-main-spacer,
 .-form-page.section-main .section-main-sidebar {
   display: none;
 }
