--- a/src/patterns/__environment__/10-tokens/heading.hbs
+++ b/src/patterns/__environment__/10-tokens/heading.hbs
@@ -1,6 +1,6 @@
 <h{{level}} class="heading -h{{level}}{{#if (and alternate (or (eq level 1) (eq level 5)))}}-alt{{/if}}{{#if (and hero (eq level 1))}}-hero{{/if}}{{#if classes}} {{classes}}{{/if}}{{#if (and (gt level 1) toc) }} is-anchored{{/if}}"
             {{#if (and (gt level 1) toc)}}id="{{dashcase (lowercase heading)}}"{{/if}}>
-  {{#if icon}}{{> tokens-icon id=icon}} {{/if}}
+  {{#if icon}}{{> tokens-icon id=icon classes=''}} {{/if}}
   {{heading}}
   {{#if (and (gt level 1) toc)}}
     <a class="link anchor" href="#{{dashcase (lowercase heading)}}">
