Adds patterns pushed from pattern-library and WIP for mutations

--- a/src/patterns/__environment__/50-organisms/main.hbs
+++ b/src/patterns/__environment__/50-organisms/main.hbs
@@ -39,9 +39,7 @@
   {{/inArray}}
 
   <main class="section-main-body">
-    {{#block 'section-main-body'}}
-      {{> compounds-blocks}}
-    {{/block}}
+    {{#block 'section-main-body'}}{{/block}}
   </main>
 
   {{#block 'section-main-divider'}}{{/block}}
