--- a/src/patterns/__environment__/50-organisms/main.hbs
+++ b/src/patterns/__environment__/50-organisms/main.hbs
@@ -39,7 +39,9 @@
   {{/inArray}}
 
   <main class="section-main-body">
-    {{#block 'section-main-body'}}{{/block}}
+    {{#block 'section-main-body'}}
+      {{> compounds-blocks}}
+    {{/block}}
   </main>
 
   {{#block 'section-main-divider'}}{{/block}}
