--- a/src/patterns/__environment__/60-templates/info.hbs
+++ b/src/patterns/__environment__/60-templates/info.hbs
@@ -84,7 +84,8 @@
 
     {{#extend 'organisms-main' type='info-page' classes='info-page-main'}}
       {{#content 'section-main-body'}}
-        {{> compounds-blocks}}
+        {{#if toc}}{{> molecules-table-of-contents}}{{/if}}
+        {{> compounds-blocks }}
       {{/content}}
       {{#content 'section-main-sidebar'}}
         {{#if (and explorer (gt (length explorer.links) 0))}}
